[gd_scene load_steps=11 format=3 uid="uid://ykuou1deo5ub"]

[ext_resource type="Script" path="res://addons/guide/ui/renderers/touch/guide_touch_renderer.gd" id="1_wulrq"]
[ext_resource type="Texture2D" uid="uid://c5nwnp5cjny7m" path="res://addons/guide/ui/renderers/touch/styles/touch_1_finger.png" id="2_b6hdr"]
[ext_resource type="Texture2D" uid="uid://bllhe78a1yo6" path="res://addons/guide/ui/renderers/touch/styles/touch_2_fingers.png" id="3_hk3mb"]
[ext_resource type="Texture2D" uid="uid://bwhqf2nmm5q1w" path="res://addons/guide/ui/renderers/touch/styles/touch_3_fingers.png" id="4_swfqu"]
[ext_resource type="Texture2D" uid="uid://cjw5m42gufghr" path="res://addons/guide/ui/renderers/touch/styles/touch_4_fingers.png" id="5_b7wc6"]
[ext_resource type="Texture2D" uid="uid://bxj4t5vjx7o3w" path="res://addons/guide/ui/renderers/touch/styles/touch_rotate.png" id="6_m5fhs"]
[ext_resource type="Texture2D" uid="uid://cutplj0nhphk" path="res://addons/guide/ui/renderers/touch/styles/touch_zoom.png" id="7_q2tlp"]
[ext_resource type="Texture2D" uid="uid://bmgxqbypegjxh" path="res://addons/guide/ui/renderers/textures/arrow_horizontal.svg" id="8_v744w"]
[ext_resource type="Texture2D" uid="uid://bu5nlug6uf03w" path="res://addons/guide/ui/renderers/textures/arrow_vertical.svg" id="9_yug52"]
[ext_resource type="Texture2D" uid="uid://dwb1h8sfsccyy" path="res://addons/guide/ui/renderers/textures/arrow_all_directions.svg" id="10_w0ld1"]

[node name="TouchRenderer" type="MarginContainer"]
offset_right = 100.0
offset_bottom = 100.0
size_flags_horizontal = 0
script = ExtResource("1_wulrq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0

[node name="Controls" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="T1Finger" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("2_b6hdr")
stretch_mode = 4

[node name="T2Fingers" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("3_hk3mb")
stretch_mode = 4

[node name="T3Fingers" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("4_swfqu")
stretch_mode = 4

[node name="T4Fingers" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("5_b7wc6")
stretch_mode = 4

[node name="Rotate" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("6_m5fhs")
stretch_mode = 4

[node name="Zoom" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("7_q2tlp")
stretch_mode = 4

[node name="Directions" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Horizontal" type="TextureRect" parent="HBoxContainer/Directions"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_v744w")
stretch_mode = 4

[node name="Vertical" type="TextureRect" parent="HBoxContainer/Directions"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("9_yug52")
stretch_mode = 4

[node name="Axis2D" type="TextureRect" parent="HBoxContainer/Directions"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("10_w0ld1")
stretch_mode = 4
